--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
-    "react-type-animation": "^3.2.0"
+    "react-slick": "^0.30.3",
+    "react-type-animation": "^3.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
